--- a/manifests/slzb-mr3.yaml
+++ b/manifests/slzb-mr3.yaml
@@ -15,6 +15,8 @@ gbl:
 #  SL_ZIGBEE_MULTICAST_TABLE_SIZE: 26
 #  SL_ZIGBEE_ROUTE_TABLE_SIZE: 16
 #  SL_ZIGBEE_DISCOVERY_TABLE_SIZE: 8
+slcp_defines:
+  EMBER_MAX_DEPTH: 5
 
 c_defines:
   EMBER_APS_UNICAST_MESSAGE_COUNT: 32
@@ -24,8 +26,9 @@ c_defines:
   EMBER_MAX_END_DEVICE_CHILDREN: 32
   EMBER_PACKET_BUFFER_COUNT: 255
   EMBER_SOURCE_ROUTE_TABLE_SIZE: 1
-  EMBER_MAX_DEPTH: 5
-  EMBER_NEIGHBOR_TABLE_SIZE: 32
+  #EMBER_MAX_HOPS: 10
+  #EMBER_MAX_DEPTH: 5
+  EMBER_NEIGHBOR_TABLE_SIZE: 26
 
 
   EMBER_CHILD_TABLE_SIZE:
